ignore.2015/05/05.10_53_51.43.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   .gitignore
	modified:   History.txt

+---------+---------+---------+---------+---------+---------+---------+---------+ 
tool_del_tmp.2015/05/05.10_58_18.99.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   History.txt
	new file:   "ToolKit/Bat/\346\211\271\351\207\217\345\210\240\351\231\244VC\344\270\264\346\227\266\346\226\207\344\273\266.txt"

+---------+---------+---------+---------+---------+---------+---------+---------+ 
"Pattern.EveryWhere".2015/05/06.17_42_14.09.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   Doc/K/T.2015.BugFree.cs
	modified:   History.txt

+---------+---------+---------+---------+---------+---------+---------+---------+ 
Game_D.2015/05/07.13_25_23.60.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   History.txt
	new file:   "ZGame/Doc/DirectX 9.0 3D\346\270\270\346\210\217\345\274\200\345\217\221\347\274\226\347\250\213\345\237\272\347\241\200\347\232\204\350\257\204\350\256\272.txt"
	new file:   "ZGame/Doc/\346\270\270\346\210\217\347\250\213\345\272\217\345\221\230\345\205\273\346\210\220\350\256\241\345\210\222.txt"
	new file:   ZGame/T.ZGame.cs

+---------+---------+---------+---------+---------+---------+---------+---------+ 
Game_D.2015/05/07.13_37_16.73.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   History.txt
	modified:   ZGame/T.ZGame.cs
