@@ -596,3 +596,15 @@ Changes to be committed:
 	modified:   History.txt
 	modified:   ZGame/T.ZGame.cs
 
++---------+---------+---------+---------+---------+---------+---------+---------+ 
+vc6_plugin.2015/05/08.10_33_39.03.K.MzM.T@WS 
+On branch master
+Your branch is up-to-date with 'origin/master'.
+
+Changes to be committed:
+  (use "git reset HEAD <file>..." to unstage)
+
+	modified:   Doc/K/T.2015.BugFree.cs
+	new file:   "Doc/vc6/vc6\346\217\222\344\273\266.txt"
+	modified:   History.txt
+
